Added Lasagna and Grilled Cheese

--- a/recipes/oatmeal-cookies.html
+++ b/recipes/oatmeal-cookies.html
@@ -10,7 +10,7 @@
     <h1>Oatmeal Cookies! - courtesy of Milk Bar</h1>
     <p><h3>Description</h3>
     <p>This is an oatmeal cookie recipe I found on the Milk Bar website.  
-        You can find the link to the real recipe at <a href="https://milkbarstore.com/blogs/christina-tosi-bake-club/bake-club-oatmeal-cookies"></a></p>
+        You can find the link to the real recipe at <a href="https://milkbarstore.com/blogs/christina-tosi-bake-club/bake-club-oatmeal-cookies">Milk Bar link</a></p>
     </p>
     <p>This recipe will make about 2 dozen cookies.</p>
     <h4>Ingredients</h4>
@@ -22,7 +22,7 @@
         <li>2 teaspoons vanilla extract</li>
         <li>2 cups flour</li>
         <li>2 1/4 cup old fashioned oats</li>
-        <1i>1 teaspoon kosher salt></li>
+        <li>1 teaspoon kosher salt</li>
         <li>1 teaspoon ground cinnamon</li>
         <li>1 teaspoon baking soda</li>
         <li>1 cup powdered sugar</li>
