--- a/recipes/grilledcheese.html
+++ b/recipes/grilledcheese.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grilled Cheese</title>
+    <title>Gochujang Grilled Cheese</title>
 </head>
 <body>
-    
+    <h1>Gochujang Grilled Cheese</h1>
+    <img src="gochujang.jpg" alt="picture of sandwich">
+    <p><h3>Description</h3>
+    <p>This is a recipe I came up with inspired by the internet</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>1 tablespoon butter</li>
+        <li>3 tablespoons mayo, 1 tablespoon separated</li>
+        <li>2 tablespoons gochujang</li>
+        <li>1/2 cup cheddar cheese, shredded</li>
+        <li>1 green onion, sliced green parts</li>
+        <li>2 slices of sourdough bread</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Combine 2 tablespoons mayo and gochujang with cheese and green onion</li>
+        <li>Spread mayo on exterior of sourdough bread.</li>
+        <li>Put combined gochujang mayo cheese between the slices of bread</li>
+        <li>Melt butter in pan</li>
+        <li>Grill both sides of sandwich in the pan</li>
+        <li>Cut into triangles</li>
+    </ol>
+
 </body>
 </html>
