--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="lasagna.jpg" alt="picture of lasagna">
     <p><h3>Description</h3>
-    <p></p>
     <p>This is a recipe for Lasagna found on <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">allrecipes.com</a></p>
     <h4>Ingredients</h4>
     <ul>
