--- a/recipes/oatmeal-cookies.html
+++ b/recipes/oatmeal-cookies.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Oatmeal Cookies! - courtesy of Milk Bar</h1>
+    <img src="oatmeal_cookies.jpg" alt="picture of oatmeal cookies">
     <p><h3>Description</h3>
     <p>This is an oatmeal cookie recipe I found on the Milk Bar website.  
         You can find the link to the real recipe at <a href="https://milkbarstore.com/blogs/christina-tosi-bake-club/bake-club-oatmeal-cookies">Milk Bar link</a></p>
