Moved images to separate folder

--- a/recipes/grilledcheese.html
+++ b/recipes/grilledcheese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Gochujang Grilled Cheese</h1>
-    <img src="gochujang.jpg" alt="picture of sandwich">
+    <img src="../images/gochujang.jpg" alt="picture of sandwich">
     <p><h3>Description</h3>
     <p>This is a recipe I came up with inspired by the internet</p>
     <h4>Ingredients</h4>
